# Purple

./: .clang-format  .doxygen_cfg  .gitignore  CMakeLists.txt  CONTRIBUTOR_LICENSE_AGREEMENT  Doxyfile  README.md  README_8md.html  STYLE.md  WISHLIST.md  annotated.html  arguments_8c.html  arguments_8c__incl.map  arguments_8c__incl.md5  arguments_8h.html  arguments_8h__dep__incl.map  arguments_8h__incl.map  arguments_8h__incl.md5  arguments_8h_source.html  base__test_8prp.html  clang_8c.html  clang_8c__incl.map  clang_8c__incl.md5  clang_8h.html  clang_8h__dep__incl.md5  clang_8h_source.html  classes.html  clean.sh  compile.sh  condition__test_8prp.html  data_8h.html  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h__incl.map  data_8h__incl.md5  data_8h_source.html  declaration_8c.html  declaration_8c__incl.map  declaration_8c__incl.md5  dir_000001_000004.html  (+263 more)
doc/: index
docs/: DoxygenLayout.xml  doxygen-style.css  grammar  header.html  index
examples/: base_test.prp  comparison_test.prp  condition_test.prp  function_test.prp  loop_test.prp  pointer_test.prp  pointer_test_2.prp  print_test.prp  type_test.prp  variable_test.prp  with_as_test.prp
html/: README_8md.html  annotated.html  arguments_8c.html  arguments_8c__incl.map  arguments_8c__incl.md5  arguments_8h.html  arguments_8h__dep__incl.map  arguments_8h__dep__incl.md5  arguments_8h__incl.map  arguments_8h_source.html  clang_8c.html  clang_8c__incl.map  clang_8c__incl.md5  clang_8h.html  clang_8h__dep__incl.map  clang_8h_source.html  classes.html  comparison__test_8prp.html  data_8h.html  data_8h__dep__incl.map  data_8h__dep__incl.md5  data_8h__incl.map  data_8h__incl.md5  data_8h_source.html  declaration_8c.html  declaration_8c__incl.map  declaration_8c__incl.md5  dir_000001_000004.html  dir_000001_000006.html  (+258 more)
(+507 files in other folders)
